# quantitative-research-report

./: .gitignore  AGENT.md  FILES.md  IMPLEMENTATION_PLAN.md  REQUIREMENTS.md
app/: README.md  build_presentation.py  build_report.py  collect_data.py  companies.csv  descriptive_analysis.py  inferential_analysis.py  multivariate_analysis.py  prepare_dataset.py  pyproject.toml
app/data/: analysis_dataset.xlsx  analysis_revenue_subset.xlsx  companies_financials.xlsx  mean_changes.xlsx  raw_bfo.json
app/output/: cluster_results.xlsx  correlation_matrix.xlsx  descriptive_stats.xlsx  hypothesis_tests.xlsx  normality_tests.xlsx  presentation.pptx  regression_results.xlsx  report.xlsx
output/: report.md  stage1_research_design.md  stage2_data_sources.md  stage3_variables.md  stage4_descriptive.md  stage5_inferential.md  stage6_multivariate.md  stage7_conclusions.md
sources/: data.txt  Анализ+данных+ПащенкоТВ+Банкроты+ПК.xlsx  Задание на исследование рынка, ориентированного на сбыт (1).docx  Примеры для отчета (1).pptx  СПАРК_Выборка_компаний_20260616_1028.xlsx  СПАРК_Выборка_компаний_20260616_1031.xlsx  СПАРК_Выборка_компаний_20260616_1033.xlsx
